Add results page

--- a/election/templates/election/position.html
+++ b/election/templates/election/position.html
@@ -128,7 +128,7 @@
             </div>
             {% endfor %}
             <div class="list-group-item row vote-nomination-item">
-              <label class="col-5">Re-Open Nomination</label>
+              <label class="col-5">Re-Open Nomination (RON)</label>
               {% for n in nominations %}
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="ron" id="{{ nomination.uuid}}Radio{{ forloop.counter }}" value="{{ forloop.counter }}">
