--- a/shop/templates/shop/item.html
+++ b/shop/templates/shop/item.html
@@ -73,7 +73,7 @@
         <h5>
           {{ item.name }}
         </h5>
-        <p>{{ item.description }}</p>
+        <div>{{ item.description|linebreaks }}</div>
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" id="orderForm">        
           <input type="hidden" name="cmd" value="_s-xclick">
           <input type="hidden" name="hosted_button_id" value="{{ item.paypal_button_id }}">
