Update 404 page style

--- a/website/templates/website/error_pages/404.html
+++ b/website/templates/website/error_pages/404.html
@@ -8,7 +8,10 @@
   <!--<p>Got lost? The <a href="#" class="alert-link">sitemap</a> might help!</p>-->
 </div>
 <figure class="container mt-3">
-  <img src="{% static 'website/content/eso1907a.jpg' %}" alt="Black Hole image" class="img-fluid">
-  <figcaption>Here is a black hole.</figcaption>
+  <img src="{% static 'website/content/eso1907a.jpg' %}" alt="Black Hole image" class="img-fluid col-sm-4 align-self-center">
+  <figcaption>
+    Here is a black hole.<br>
+    <small class="text-muted">Image credit: EHT Collaboration (<a href="https://www.eso.org/public/images/eso1907a/">https://www.eso.org/public/images/eso1907a/</a>)</small>
+  </figcaption>
 </figure>
 {% endblock %}
