--- a/website/templates/website/error_pages/404.html
+++ b/website/templates/website/error_pages/404.html
@@ -7,8 +7,8 @@
   <h1>Page not found</h1>
   <!--<p>Got lost? The <a href="#" class="alert-link">sitemap</a> might help!</p>-->
 </div>
-<figure class="container mt-3">
-  <img src="{% static 'website/content/eso1907a.jpg' %}" alt="Black Hole image" class="img-fluid col-sm-4 align-self-center">
+<figure class="container mt-3 row">
+  <img src="{% static 'website/content/eso1907a.jpg' %}" alt="Black Hole image" class="img-fluid col-md-6">
   <figcaption>
     Here is a black hole.<br>
     <small class="text-muted">Image credit: EHT Collaboration (<a href="https://www.eso.org/public/images/eso1907a/">https://www.eso.org/public/images/eso1907a/</a>)</small>
