--- a/website/templates/website/committee/committee-overview.html
+++ b/website/templates/website/committee/committee-overview.html
@@ -24,17 +24,20 @@
     </div>
     <div class="col-md-6">
       <img class="img-fluid" src="{% static 'website/content/committee/committee-group.jpg' %}" alt="2018-2019 ECSS committee group at Hobbit BBQ social">
+      <small class="text-muted">
+        The group photo is of 2018-2019 committee.
+      </small>
     </div>
   </div>
   <section class="mt-3">
-    <h2>2018-2019 Committee</h2>
+    <h2>2019-2020 Committee</h2>
     <hr>
     Click any of the roles below to see who currently holds the role, and their pledges.
     <ul class="list-unstyled d-flex justify-content-around flex-wrap">
       {% for committee_role_member in committee %}
       <li class="text-center committee-item">
         <a href="{% url 'website:committee-member' committee_role_member.role_codename %}" class="committee-img-link">
-          <img class="img-fluid" src="{% static committee_role_member.member_pic_file %}" alt="{{ committee_role_member.member_name }}">
+          <img class="img-fluid" src="{{ committee_role_member.member_image.url }}" alt="{{ committee_role_member.member_name }}">
         </a>
         <a href="{% url 'website:committee-member' committee_role_member.role_codename %}" class="committee-member-name-link">
           <div>{{ committee_role_member.member_name }}</div>
