Committee manifesto supports some markdown

--- a/website/templates/website/committee/committee-member.html
+++ b/website/templates/website/committee/committee-member.html
@@ -43,7 +43,7 @@
       </div>
       <hr>
       <div>
-        {{ current_committee_member.member_manifesto | safe }}
+        {{ current_committee_member.member_manifesto | md | safe }}
       </div>
 
       <ul class="list-unstyled">
