Fix filter load

--- a/website/templates/website/committee/committee-member.html
+++ b/website/templates/website/committee/committee-member.html
@@ -1,6 +1,7 @@
 {% extends 'website/base.html' %}
 
 {% load static %}
+{% load website_extra %}
 
 {% block title %}Committee - ECSS{% endblock title %}
 
