--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -60,7 +60,7 @@
                   <a class="dropdown-item" href="{% url 'website:gaming-socials' %}">Gaming Socials</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="{% url 'website:jumpstart-2018' %}">Jumpstart 2018</a>
-                  <a class="dropdown-item" href="{% url 'website:campus-hack-19' %}">CampusHack19</a>
+                  <!--<a class="dropdown-item" href="{% url 'website:campus-hack-19' %}">CampusHack19</a>-->
                 </div>
               </li>
               <li class="nav-item">
