--- a/portal/templates/portal/base.html
+++ b/portal/templates/portal/base.html
@@ -40,11 +40,6 @@
             Overview
           </a>
         </li>
-        <!--
-        <li class="list-group-item">
-          <a href="#">Voting</a>
-        </li>
-        -->
         <li class="list-group-item">
           <ul class="list-unstyled">
             <li>
@@ -56,6 +51,9 @@
           <ul class="list-unstyled">
             <li>
               <a href="{% url 'election:elections' %}">Elections</a>
+            </li>
+            <li>
+              <a href="{% url 'election:results' %}">Election Results</a>
             </li>
           </ul>
         </li>
