--- a/website/templates/website/committee/committee-overview.html
+++ b/website/templates/website/committee/committee-overview.html
@@ -23,10 +23,7 @@
       </ul>
     </div>
     <div class="col-md-6">
-      <img class="img-fluid" src="{% static 'website/content/committee/committee-group.jpg' %}" alt="2018-2019 ECSS committee group at Hobbit BBQ social">
-      <small class="text-muted">
-        The group photo is of 2018-2019 committee.
-      </small>
+      <img class="img-fluid" src="{% static 'website/content/committee/committee-group.jpg' %}" alt="2019-2020 ECSS committee group at STEM Summer Ball 2019">
     </div>
   </div>
   <section class="mt-3">
