--- a/website/templates/website/welfare.html
+++ b/website/templates/website/welfare.html
@@ -9,7 +9,7 @@
   <section class="container">
     <h1>Welfare</h1>
     <p>
-      Any degree in the Electronic and Computer Science Society can be challenging. Work loads can be high and stress can be difficult manage. The job of the welfare sec is to lend guidance and support when things get tough. Whether it’s bad results, home-sickness or just needing a chat the welfare sec will be able to point you in the right direction. This year’s welfare officer is Alicja (Ala) Bochnacka, a second year electronics student.
+      Any degree in the Electronic and Computer Science Society can be challenging. Work loads can be high and stress can be difficult manage. The job of the welfare sec is to lend guidance and support when things get tough. Whether it’s bad results, home-sickness or just needing a chat the welfare sec will be able to point you in the right direction. This year’s welfare officer is Ealish Corkill, a second year electronics student.
     </p>
   </section>
 </div>
