Update constitution and meeting minutes links

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -87,7 +87,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarAboutDropdown">
                   <a class="dropdown-item" href="{% url 'website:about' %}">About</a>
-                  <a class="dropdown-item" href="https://society.ecs.soton.ac.uk/filestore/index.php/s/idGPSGlxT15tbHi">Constitution</a>
+                  <a class="dropdown-item" href="https://society.ecs.soton.ac.uk/constitution/">Constitution</a>
                   <a class="dropdown-item" href="{% url 'website:contact' %}">Contact Us</a>
                   <a class="dropdown-item" href="https://society.ecs.soton.ac.uk/about/credits.php">Credits</a>
                 </div>
@@ -131,7 +131,7 @@
             <dt></dt>
             <dd class="footer-item"><a href="{% url 'website:about' %}" class="footer-link">About</a></dd>
             <dd class="footer-item"><a href="{% url 'website:contact' %}" class="footer-link">Contact</a></dd>
-            <dd class="footer-item"><a href="https://society.ecs.soton.ac.uk/filestore/index.php/s/FGMWH0tjcjnHRpe" class="footer-link">Meeting Minutes</a></dd>
+            <dd class="footer-item"><a href="https://society.ecs.soton.ac.uk/meeting-minutes/" class="footer-link">Meeting Minutes</a></dd>
             <dd class="footer-item"><a href="{% url 'website:societies' %}" class="footer-link">Societies in ECS</a></dd>
             <dd class="footer-item"><a href="https://www.ecs.soton.ac.uk" class="footer-link">ECS</a></dd>
           </dl>
