Update navbar link for jumpstart 2019

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -79,11 +79,11 @@
                 </div>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarFreshersDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="{% url 'website:jumpstart-2019' %}" id="navbarFreshersDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Freshers
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarFreshersDropdown">
-                  <a class="dropdown-item" href="#">Jumpstart 2019</a>
+                  <a class="dropdown-item" href="{% url 'website:jumpstart-2019' %}">Jumpstart 2019</a>
                 </div>
               </li>
               <li class="nav-item dropdown">
