Update Jumpstart page

--- a/website/templates/website/freshers/jumpstart-2018.html
+++ b/website/templates/website/freshers/jumpstart-2018.html
@@ -34,6 +34,9 @@
 <main class="content-jumpstart2018">
   <section id="jumpstart2018" class="pt-4 mb-0">
     <div class="container">
+      <div class="alert alert-warning">
+        This page is archived. You can view <a href="{% url 'website:jumpstart-redirect' %}" class="alert-link">the latest Jumpstart page</a>. 
+      </div>
       <div class="logos-jumpstart2018">
         <div class="logo-container-jumpstart2018">
           <img class="img-fluid" src="{% static 'website/images/jumpstart-logo.png' %}" alt="Jumpstart">
