Fix load template tags

--- a/website/templates/website/societies/society.html
+++ b/website/templates/website/societies/society.html
@@ -1,6 +1,7 @@
 {% extends 'website/base.html' %}
 
 {% load static %}
+{% load website_extra %}
 
 {% block title %}Societies in ECS{% endblock title %}
 
