Update homepage title

--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -33,7 +33,7 @@
 
     -->
     <img src="{% static 'website/images/ecss-logo-square.png' %}" alt="ECSS logo" class="logo-home">
-    <h1 class="text-center">Welcome to ECSS!</h1>
+    <h1 class="text-center text-nowrap">University of Southampton<br> Electronics and<wbr> Computer Science Society</h1>
     <p>Welcome to the University of Southampton Electronics and Computer Science (ECS) Society website.</p>
     <p>We are a student-run society for ECS at the University of Southampton.</p>
     <p>On this website you will find information about the society such as who we are, what we aim to do, as well as what events we are currently organising!</p>
