--- a/website/templates/website/sports/netball.html
+++ b/website/templates/website/sports/netball.html
@@ -7,6 +7,7 @@
 {% block content %}
 <div class="page-header">
   <section class="container">
+    <div class="alert alert-warning">This page needs to be updated and information may not be accurate at this moment. Please <a href="{% url 'website:contact' %}">contact us</a> if you are interested in netball in ECSS</div>
     <h1>Netball</h1>
     <p>
       This year we are joining up with the Physoc and with the SUES (Southampton University Engineering Society) to create a women’s netball team. We welcome players of any ability.
@@ -35,5 +36,7 @@
     <div class="col-md-5 order-md-0 d-flex align-items-center">
       <img class="img-fluid" src="{% static 'website/content/sports/netball-logo.jpg' %}" alt="Netball logo">
     </div>
+  </section>
+  <div class="mt-3"><a href="{% url 'website:sports' %}"><i class="fas fa-arrow-circle-left"></i> sports overview</a></div>
 </div>
 {% endblock %}
