--- a/website/templates/website/freshers/freshers-2019.html
+++ b/website/templates/website/freshers/freshers-2019.html
@@ -20,26 +20,97 @@
   <section>
     <h1>ECSS Freshers 2019</h1>
     <p>
-      Welcome freshers!
+      Welcome freshers! We are a student run society within Electronics and Computer Science (ECS) at the University of Southampton. We run a range of events throughout the terms including socials, video games and board games events, talks and workshops from industry. We also host the ECS Christmas party at the end of the first term, hackathons (including a big one planned this year) and the end of year BBQ. We do our very popular members' clothing orders every year (normally once a year so don't miss out), and some of the designs are from our members!
     </p>
-  </section>
-  <section>
-    <h2>Jumpstart</h2>
     <p>
-      Jumpstart is an opportunity for ECS freshers to meet other students in ECS, take part in a range of activities, and settle into Southampton. It is our first ECSS event of the year, and is sponsored by IBM. You can learn more at the <a href="{% url 'website:jumpstart-2019' %}">Jumpstart page</a>.
+      It is not required to sign up as an ECSS member to come to most of our events, however, some events which space is limited may require sign up for the events and some have additional benefits for ECS/ECSS members (e.g. we offered free drink tokens for ECS members at the ECS Christmas party). You can get our events updates on <a href="https://www.facebook.com/ecss.soton/events/" title="ECSS Facebook events page">our Facebook events page</a>. Most of our events are free to come and have free pizza or snacks provided (thanks to <a href="{% url 'website:sponsors' %}" title="ECSS sponsors">our sponsors</a> who make these happen), however, some of the events require a charge which we make it as small as possible to put into the events.
+    </p>
+    <p>
+      You can find out more about the current <a href="{% url 'website:committee-overview' %}" title="ECSS committee">ECSS committee</a> and talk to the members in person around campus. If you are interested in joining the committee, look out for information about committee elections and AGM which is normally held in March or April.
     </p>
   </section>
   <section>
+    <h2>Jumpstart and Schedule</h2>
+    <p>
+      Jumpstart is a series of ECS specific freshers events during the Freshers'. It is an opportunity for ECS freshers to meet other members in ECS, take part in a range of activities, and settle into Southampton. It is our first ECSS event of the year, and is sponsored by IBM. You can learn more at the <a href="{% url 'website:jumpstart-2019' %}">Jumpstart page</a>.
+    </p>
+    <p>
+      Our ECS and ECSS specific freshers events schedule will be available soon.
+    </p>
+    <p>
+      There are also other <a href="https://www.southampton.ac.uk/welcome-events/" title="University of Southampton welcome events calendar">university welcome events</a> and <a href="https://www.susu.org/calendar/" title="University of Southampton Students' Union calendar">events in the Students' Union</a>.
+    </p>
+  </section>
+  <!-- <section>
     <h2>ECSS Student Guide</h2>
     <p>
       Feel excited, worried or lost? Have a look at our <a href="http://web.archive.org/web/20070724145311/http://society.ecs.soton.ac.uk/Freshtips">ECSS Student Guide from more than 12 years ago on Internet Archive</a> (things might have changed though)!
     </p>
-  </section>
+  </section> -->
   <section>
     <h2>Social Groups and Chat</h2>
     <p>
       We have an <a href="https://www.facebook.com/groups/ecss.soton/">ECSS Facebook group</a> for infomation about events, opportunities and members' discussions. We also manage an <a href="https://www.facebook.com/groups/ECSFreshers201920/">ECS Freshers 2019/2020 Facebook Group</a> for more freshers related discussions, and there is a chat which you can join after joining the freshers group or <a href="{% url 'website:contact' %}">contact us</a> for more information.
     </p>
+    <div class="mt-3">
+      We also present on the online platforms:
+      <ul class="list-unstyled">
+        <li class="my-1"><a href="https://www.facebook.com/ecss.soton/" class="icon-link"><i class="fab fa-facebook" title="ECSS Facebook page" aria-hidden="true"></i> ECSS Facebook Page</a></li>
+        <li class="my-1"><a href="https://twitter.com/ecs_society" class="icon-link"><i class="fab fa-twitter" title="ECSS Twitter" aria-hidden="true"></i> ECSS Twitter</a></li>
+        <li class="my-1"><a href="https://www.instagram.com/ecss_soton/" class="icon-link"><i class="fab fa-instagram" title="ECSS Instagram" aria-hidden="true"></i> ECSS Instagram</a></li>
+        <li class="my-1"><a href="https://github.com/ecss-soton/" class="icon-link"><i class="fab fa-github" title="ECSS GitHub" aria-hidden="true"></i> ECSS GitHub</a></li>
+      </ul>
+    </div>
+  </section>
+  <section>
+    <h2>Societies and Opportunities</h2>
+    <p>
+      If you fancy sports, have a look at our intramural football team within ECSS or join the group of people in ECSS go to running events, or learn more about us doing different kinds of sports at our <a href="{% url 'website:sports' %}" title="ECSS sports">sports page</a>.
+    </p>
+    <p>
+      Besides us, there are also some other <a href="{% url 'website:societies' %}" title="Societies in ECS">ECS related societies</a>, and many other <a href="https://www.susu.org/opportunities/societies" title="Societies at the University of Southampton Students' Union">societies in the university</a>. You can also learn more about them in the faculty bunfight planned on Thursday 26th September and Students' Union (SUSU) bunfight on Wednesday 25th September. <!-- If you fancy weekend walks, you can also find out about <a href="https://walking.susu.org/" title="Southampton University Hillwalking Club">hillwalking club (SUHC)</a> where you will find like-minded people and many of them are also in ECS. -->
+    </p>
+    <p>
+      We run events with industry and this can be a good way for our members to establish connections with them. There are also career fairs (including the Faculty of Engineering and Physical Sciences specific ones), opportunities advertised, and supports in the university. You can find more about <a href="https://www.ecs.soton.ac.uk/careers" title="ECS Careers Hub">ECS Careers Hub</a>, university's <a href="https://www.southampton.ac.uk/careers/students/index.page" title="University of Southampton careers and employability service">careers and employability service</a> and <a href="https://mycareer.soton.ac.uk" title="MyCareer: the University of Southampton's online career platform">MyCareer</a> (university's online career platform).
+    </p>
+  </section>
+  <section>
+    <h2>Useful Links</h2>
+    <ul>
+      <li>
+        <a href="https://sussed.soton.ac.uk/" title="University of Southampton SUSSED portal">SUSSED portal</a> where you can find university news and announcement, and links to many university services.
+      </li>
+      <li>
+        <a href="https://outlook.office365.com/owa/soton.ac.uk/" title="Office 365 email for University of Southampton">Direct link to university Office 356 email</a>
+      </li>
+      <li>
+        <a href="https://subscribe.soton.ac.uk/" title="Subscribe: manage University of Southampton computing account">Subscribe</a> (manage university computing account)
+      </li>
+      <li>
+        <a href="https://www.southampton.ac.uk/welcome-events/" title="University of Southampton welcome events calendar">University welcome events calendar</a>
+      </li>
+      <li>
+        <a href="https://susu.org/" title="SUSU: University of Southampton Students' Union">SUSU</a> (Students' Union)
+      </li>
+      <li>
+        <a href="https://www.facebook.com/UnionSouthamptonFreshers/" title="University of Southampton Freshers' 2019/20 Facebook page">The official Students' Union Freshers' 2019/20 Facebook page</a>
+      </li>
+      <li>
+        <a href="https://www.facebook.com/groups/1968854383341739/" title="University of Southampton Freshers' 2019/20 Facebook group">The official Students' Union Freshers' 2019/20 Facebook group</a>
+      </li>
+      <li>
+        <a href="https://maps.southampton.ac.uk/" title="University of Southampton map">Campus map</a>
+      </li>
+      <li>
+        <a href="https://www.unilinkbus.co.uk/" title="Unilink buses">Unilink buses</a>
+      </li>
+      <li>
+        <a href="https://timetable.soton.ac.uk/" title="University of Southampton Course Timetables">Course Timetables</a>
+      </li>
+      <!-- <li>
+        <a href="https://www.facebook.com/Crushampton/">Crushampton</a> (all you need)
+      </li> -->
+    </ul>
   </section>
 </main>
 {% endblock %}
