Add more useful links to freshers page

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -73,9 +73,9 @@
                   Freshers
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarFreshersDropdown">
-                  <a class="dropdown-item" href="{% url 'website:freshers-2019' %}">Freshers 2019</a>
+                  <a class="dropdown-item" href="{% url 'website:freshers-2019' %}">Freshers</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="{% url 'website:jumpstart-2019' %}">Jumpstart 2019</a>
+                  <a class="dropdown-item" href="{% url 'website:jumpstart-2019' %}">Jumpstart</a>
                 </div>
               </li>
               <li class="nav-item dropdown">
