--- a/website/templates/website/freshers/freshers-2019.html
+++ b/website/templates/website/freshers/freshers-2019.html
@@ -77,13 +77,19 @@
     <h2>Useful Links</h2>
     <ul>
       <li>
-        <a href="https://sussed.soton.ac.uk/" title="University of Southampton SUSSED portal">SUSSED portal</a> where you can find university news and announcement, and links to many university services.
+        <a href="https://sussed.soton.ac.uk/" title="University of Southampton SUSSED portal">SUSSED portal</a> where you can find university news and announcement, and links to many university services
       </li>
       <li>
         <a href="https://outlook.office365.com/owa/soton.ac.uk/" title="Office 365 email for University of Southampton">Direct link to university Office 356 email</a>
       </li>
       <li>
         <a href="https://subscribe.soton.ac.uk/" title="Subscribe: manage University of Southampton computing account">Subscribe</a> (manage university computing account)
+      </li>
+      <li>
+        <a href="https://www.southampton.ac.uk/isolutions/students/index.page" title="University of Southampton IT services for students">IT services for students</a>
+      </li>
+      <li>
+        <a href="https://secure.ecs.soton.ac.uk/" title="ECS Intranet">ECS Intranet</a>
       </li>
       <li>
         <a href="https://www.southampton.ac.uk/welcome-events/" title="University of Southampton welcome events calendar">University welcome events calendar</a>
