Update contact page

--- a/website/templates/website/freshers/freshers-2019.html
+++ b/website/templates/website/freshers/freshers-2019.html
@@ -52,7 +52,9 @@
       We have an <a href="https://www.facebook.com/groups/ecss.soton/">ECSS Facebook group</a> for infomation about events, opportunities and members' discussions. We also manage an <a href="https://www.facebook.com/groups/ECSFreshers201920/">ECS Freshers 2019/2020 Facebook Group</a> for more freshers related discussions, and there is a chat which you can join after joining the freshers group or <a href="{% url 'website:contact' %}">contact us</a> for more information.
     </p>
     <div class="mt-3">
-      We also present on the online platforms:
+      <p>
+        We also present on the online platforms:
+      </p>
       <ul class="list-unstyled">
         <li class="my-1"><a href="https://www.facebook.com/ecss.soton/" class="icon-link"><i class="fab fa-facebook" title="ECSS Facebook page" aria-hidden="true"></i> ECSS Facebook Page</a></li>
         <li class="my-1"><a href="https://twitter.com/ecs_society" class="icon-link"><i class="fab fa-twitter" title="ECSS Twitter" aria-hidden="true"></i> ECSS Twitter</a></li>
@@ -70,7 +72,7 @@
       Besides us, there are also some other <a href="{% url 'website:societies' %}" title="Societies in ECS">ECS related societies</a>, and many other <a href="https://www.susu.org/opportunities/societies" title="Societies at the University of Southampton Students' Union">societies in the university</a>. You can also learn more about them in the faculty bunfight planned on Thursday 26th September and Students' Union (SUSU) bunfight on Wednesday 25th September. <!-- If you fancy weekend walks, you can also find out about <a href="https://walking.susu.org/" title="Southampton University Hillwalking Club">hillwalking club (SUHC)</a> where you will find like-minded people and many of them are also in ECS. -->
     </p>
     <p>
-      We run events with industry and this can be a good way for our members to establish connections with them. There are also career fairs (including the Faculty of Engineering and Physical Sciences specific ones), opportunities advertised, and supports in the university. You can find more about <a href="https://www.ecs.soton.ac.uk/careers" title="ECS Careers Hub">ECS Careers Hub</a>, university's <a href="https://www.southampton.ac.uk/careers/students/index.page" title="University of Southampton careers and employability service">careers and employability service</a> and <a href="https://mycareer.soton.ac.uk" title="MyCareer: the University of Southampton's online career platform">MyCareer</a> (university's online career platform).
+      We run events with industry and this can be a good way for our members to establish connections with them. There are also career fairs (including the Faculty of Engineering and Physical Sciences specific ones), opportunities advertised, and supports in the university. You can find more about <a href="https://www.ecs.soton.ac.uk/careers" title="ECS Careers Hub">ECS Careers Hub</a>, university's <a href="https://www.southampton.ac.uk/careers/students/index.page" title="University of Southampton careers and employability service">careers and employability service</a> and <a href="https://mycareer.soton.ac.uk/" title="MyCareer: the University of Southampton's online career platform">MyCareer</a> (university's online career platform).
     </p>
   </section>
   <section>
