--- a/website/templates/website/contact.html
+++ b/website/templates/website/contact.html
@@ -5,18 +5,33 @@
 {% block title %}Contact Us - ECSS{% endblock title %}
 
 {% block content %}
-<section class="container mt-3">
-  <h1>Contact Us</h1>
-  <p>
-    ECSS welcomes all communications from its society members!
-  </p>
-  <p>
-    Please feel free to contact us at any of the links below and we will get back to you as soon as possible.
-  </p>
-  <ul class="list-unstyled">
-    <li class="my-1"><a href="https://www.facebook.com/ecss.soton/" class="icon-link"><i class="fab fa-facebook" title="ECSS Facebook page" aria-hidden="true"></i> ECSS Facebook Page</a></li>
-    <li class="my-1"><a href="https://www.facebook.com/groups/ecss.soton/" class="icon-link"><i class="fab fa-facebook" title="ECSS Facebook group" aria-hidden="true"></i> ECSS Facebook Group</a></li>
-    <li class="my-1"><a href="mailto:society@ecs.soton.ac.uk" class="icon-link"><i class="fas fa-envelope-square" title="Email" aria-hidden="true"></i> society@ecs.soton.ac.uk</a></li>
-  </ul>
-</section>
+<main class="container mt-3">
+  <section>
+    <h1>Contact Us</h1>
+    <p>
+      You can contact us via any of the ways below and we will get back to you as soon as possible:
+    </p>
+    <ul class="list-unstyled">
+      <li class="my-1"><a href="mailto:society@ecs.soton.ac.uk" class="icon-link"><i class="fas fa-envelope-square" title="Email" aria-hidden="true"></i> society@ecs.soton.ac.uk</a></li>
+      <li class="my-1"><a href="https://www.facebook.com/ecss.soton/" class="icon-link"><i class="fab fa-facebook" title="ECSS Facebook page" aria-hidden="true"></i> ECSS Facebook Page</a></li>
+    </ul>
+    <p>
+      You can also find out more about our <a href="{% url 'website:committee-overview' %}" title="ECSS committee">committee members</a>.
+    </p>
+  </section>
+  <section>
+    <h2>Connect with Us</h2>
+    <p>
+      We are also on some other online platforms:
+    </p>
+    <ul class="list-unstyled">
+      <li class="my-1"><a href="https://twitter.com/ecs_society" class="icon-link"><i class="fab fa-twitter" title="ECSS Twitter" aria-hidden="true"></i> ECSS Twitter</a></li>
+      <li class="my-1"><a href="https://www.instagram.com/ecss_soton/" class="icon-link"><i class="fab fa-instagram" title="ECSS Instagram" aria-hidden="true"></i> ECSS Instagram</a></li>
+      <li class="my-1"><a href="https://github.com/ecss-soton/" class="icon-link"><i class="fab fa-github" title="ECSS GitHub" aria-hidden="true"></i> ECSS GitHub</a></li>
+    </ul>
+    <p>
+      We post events, oppotunities and more on our <a href="https://www.facebook.com/ecss.soton/" title="ECSS Facebook page">Facebook page</a>. We also welcome our members to join the discussions on our <a href="https://www.facebook.com/groups/ecss.soton/" title="ECSS Facebook group">Facebook group</a>.
+    </p>
+  </section>
+</main>
 {% endblock %}
