Change homepage title font size on small screen

--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -4,6 +4,13 @@
 
 {% block pagestyle %}
 <link rel="stylesheet" href="{% static 'website/styles/home.css' %}">
+<style>
+@media (max-width: 575.98px) {
+  h1 {
+    font-size: 2rem;
+  }
+}
+</style>
 {% endblock %}
 
 {% block content %}
